--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,6 @@
 version: '3'
 
- 
-
 services:
-
- 
 
   node:
     build:
@@ -22,9 +18,8 @@ services:
     ports:
      - "3000:3000"
     depends_on: 
-      - mysql      
-
- 
+      mysql:
+        condition: service_healthy
 
   nginx:
     build:
@@ -38,9 +33,7 @@ services:
     depends_on: 
       - node
       - mysql
-
- 
-
+  
   mysql:
     image: mysql:5.7.16
     command: --innodb-use-native-aio=0
@@ -58,7 +51,6 @@ services:
       - "3306:3306"
     healthcheck:
       test: mysqladmin ping -u $$MYSQL_USER --password=$$MYSQL_PASSWORD
-      start_period: 5s
       interval: 5s
       timeout: 5s
       retries: 55
@@ -66,7 +58,6 @@ services:
 networks: 
   mynetwork:
     driver: bridge
-
 
 volumes:
     exclude:
